--- a/Fomalhaut2/Book.storyboard
+++ b/Fomalhaut2/Book.storyboard
@@ -20,11 +20,11 @@
                                 <subviews>
                                     <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="7FC-xx-Ash" userLabel="Left Image View">
                                         <rect key="frame" x="0.0" y="0.0" width="225" height="300"/>
-                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="ywb-Xi-d9o"/>
+                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyUpOrDown" id="ywb-Xi-d9o"/>
                                     </imageView>
                                     <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="2i5-YN-Rub" userLabel="Right Image View">
                                         <rect key="frame" x="225" y="0.0" width="225" height="300"/>
-                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="c4K-HE-zpo"/>
+                                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyUpOrDown" id="c4K-HE-zpo"/>
                                     </imageView>
                                 </subviews>
                                 <constraints>
