--- a/Fomalhaut2/Base.lproj/Main.storyboard
+++ b/Fomalhaut2/Base.lproj/Main.storyboard
@@ -529,13 +529,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="180" height="300"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <scrollView autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" horizontalScrollElasticity="none" translatesAutoresizingMaskIntoConstraints="NO" id="cVW-QY-am4">
+                            <scrollView autohidesScrollers="YES" horizontalLineScroll="22" horizontalPageScroll="10" verticalLineScroll="22" verticalPageScroll="10" usesPredominantAxisScrolling="NO" horizontalScrollElasticity="none" translatesAutoresizingMaskIntoConstraints="NO" id="cVW-QY-am4">
                                 <rect key="frame" x="0.0" y="0.0" width="180" height="300"/>
                                 <clipView key="contentView" drawsBackground="NO" id="G3p-nu-olX">
                                     <rect key="frame" x="1" y="1" width="178" height="298"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
-                                        <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" selectionHighlightStyle="sourceList" columnReordering="NO" columnResizing="NO" multipleSelection="NO" emptySelection="NO" autosaveColumns="NO" typeSelect="NO" autosaveName="FilterListView" rowSizeStyle="automatic" viewBased="YES" indentationPerLevel="6" outlineTableColumn="nV8-QU-5fY" id="L4y-LK-hH3" customClass="FilterListView" customModule="Fomalhaut2" customModuleProvider="target">
+                                        <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" selectionHighlightStyle="sourceList" columnReordering="NO" columnResizing="NO" multipleSelection="NO" emptySelection="NO" autosaveColumns="NO" typeSelect="NO" autosaveName="FilterListView" rowHeight="20" rowSizeStyle="automatic" viewBased="YES" indentationPerLevel="6" outlineTableColumn="nV8-QU-5fY" id="L4y-LK-hH3" customClass="FilterListView" customModule="Fomalhaut2" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="0.0" width="178" height="298"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <size key="intercellSpacing" width="3" height="2"/>
@@ -578,12 +578,14 @@
                                                             </connections>
                                                         </tableCellView>
                                                         <tableCellView identifier="DataCell" id="bJd-xS-TCh">
-                                                            <rect key="frame" x="1" y="20" width="175" height="17"/>
+                                                            <rect key="frame" x="1" y="20" width="175" height="20"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
-                                                                <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nuI-xn-2dn">
-                                                                    <rect key="frame" x="8" y="0.0" width="167" height="17"/>
-                                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                                                <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="nuI-xn-2dn">
+                                                                    <rect key="frame" x="8" y="0.0" width="167" height="20"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="20" id="DCw-Zg-gs4"/>
+                                                                    </constraints>
                                                                     <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" alignment="left" title="Table View Cell" id="AlB-aY-PJl">
                                                                         <font key="font" metaFont="system"/>
                                                                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -591,6 +593,11 @@
                                                                     </textFieldCell>
                                                                 </textField>
                                                             </subviews>
+                                                            <constraints>
+                                                                <constraint firstItem="nuI-xn-2dn" firstAttribute="centerY" secondItem="bJd-xS-TCh" secondAttribute="centerY" id="1if-gA-PFl"/>
+                                                                <constraint firstItem="nuI-xn-2dn" firstAttribute="leading" secondItem="bJd-xS-TCh" secondAttribute="leading" constant="10" id="AjB-CB-W2k"/>
+                                                                <constraint firstAttribute="trailing" secondItem="nuI-xn-2dn" secondAttribute="trailing" constant="2" id="rKX-Ox-Imc"/>
+                                                            </constraints>
                                                             <connections>
                                                                 <outlet property="textField" destination="nuI-xn-2dn" id="XyG-jd-xdr"/>
                                                             </connections>
@@ -697,7 +704,7 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="270" height="300"/>
                                                     <clipView key="contentView" id="BBK-wR-7a6">
                                                         <rect key="frame" x="1" y="0.0" width="268" height="299"/>
-                                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                        <autoresizingMask key="autoresizingMask"/>
                                                         <subviews>
                                                             <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" autosaveName="FileListView" rowSizeStyle="automatic" headerView="aUv-0U-ndW" viewBased="YES" id="rLV-3v-YTc">
                                                                 <rect key="frame" x="0.0" y="0.0" width="268" height="274"/>
